--- a/no1.html
+++ b/no1.html
@@ -11,7 +11,7 @@
         <div class="container">
             <div class="tenor-gif-embed" data-postid="1608745667970625446" data-share-method="host" data-aspect-ratio="1" data-width="100%"><a href="https://tenor.com/view/cat-love-bite-short-gif-1608745667970625446">Cat Love Bite Short GIF</a>from <a href="https://tenor.com/search/cat+love+bite+short-gifs">Cat Love Bite Short GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
             <h1>Why not?</h1>
-            <p>This can be us together. It's a Yes?</p>
+            <p>This can be us together, you know? Pleaseee?</p>
 
             <div class="btn">
                 <a href="yes.html">Yes</a>
